samples/_failures_safe/1761511994_603049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6131c804.c: In function ‘main’:
./samples/SAFE/__tmp_6131c804.c:130:9: error: expected declaration or statement at end of input
  130 |         printf("Invalid input for columns.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_6131c804.c:130:9: error: expected declaration or statement at end of input
